# audio_oxidiser

./: Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-2-link  flake-profile-4-link  flake-profile-5-link
src/: app.rs  effect_params.rs  main.rs  pipeline.rs  ui.rs
src/effect_ui/: delay_ui.rs  distortion_ui.rs  effect_ui.rs  mod.rs  param_widget.rs
src/effects/: delay.rs  distortion.rs  mod.rs
